--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
+    "@angular/fire": "^7.6.1",
     "@angular/forms": "^15.2.0",
     "@angular/material": "^15.2.9",
     "@angular/platform-browser": "^15.2.0",
@@ -23,6 +24,7 @@
     "@angular/service-worker": "^15.2.0",
     "@ng-bootstrap/ng-bootstrap": "^14.1.0",
     "bootstrap": "^5.2.3",
+    "firebase": "^9.22.2",
     "jquery": "^3.6.4",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
