--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.2.0",
+    "@angular/animations": "^15.2.9",
     "@angular/cdk": "^15.2.9",
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
@@ -26,6 +26,8 @@
     "bootstrap": "^5.2.3",
     "firebase": "^9.22.2",
     "jquery": "^3.6.4",
+    "ng-otp-input": "^1.9.2",
+    "ngx-toastr": "^17.0.2",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "save": "^2.9.0",
