--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^15.2.0",
     "@angular/service-worker": "^15.2.0",
     "@ng-bootstrap/ng-bootstrap": "^14.1.0",
+    "@techiediaries/ngx-qrcode": "^9.1.0",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.4",
     "popper.js": "^1.16.1",
