--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jquery": "^3.6.4",
     "ng-otp-input": "^1.9.2",
     "ngx-toastr": "^17.0.2",
+    "notiflix": "^3.2.6",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "save": "^2.9.0",
